--- a/src/pages/projects/projects.html
+++ b/src/pages/projects/projects.html
@@ -1,38 +1,67 @@
-<section class="stack">
-  <h1>Recent Projects</h1>
-  <div class="blocks">
-    <article class="card" *ngFor="let p of projects()">
-      <h3>{{ p.title }}</h3>
-      <div class="project">
-        <img *ngIf="p.img" [src]="p.img" alt="{{ p.title }}" style="width:100%; height:auto; border-radius:8px;">
-        <div class="project-info">
-          <p>{{ p.description }}</p>
-          <p *ngIf="p.link"><a [href]="p.link" target="_blank" rel="noopener">View project →</a></p>
-          <p class="help" *ngIf="p.year">Year: {{ p.year }}</p>
-          <p style="font-size:small; margin: 0px;">Tags and Technologies: </p>
-          <p style="font-size:small; margin-top: 1px;">
-            <span
-              class="badge"
-              *ngFor="let t of p.tech; let last = last"
-              style="margin-right:.4rem"
-            >
-              {{ t }}
-              <span *ngIf="!last"> |</span>
-            </span>
-          </p>
-        </div>
-      </div>
-    </article>
-  </div>
-</section>
+<section class="stack page">
+  <h1>Projects</h1>
 
-<section class="stack" style="margin-top:2rem">
-  <h2>Awards & Achievements</h2>
-  <div class="grid cols-2">
-    <article class="card" *ngFor="let a of awards()">
-      <h3>{{ a.title }}</h3>
-      <p class="help">{{ a.issuer ?? '—' }} • {{ a.year }}</p>
-      <p *ngIf="a.note">{{ a.note }}</p>
-    </article>
+  <div class="layout">
+    <!-- Sidebar -->
+    <aside class="sidebar">
+      <h4 class="sidebar-title">Tag Filters</h4>
+
+      <div class="filters" role="radiogroup" aria-label="Tag filters">
+        @for (t of allTags(); track t) {
+          <button
+            type="button"
+            role="radio"
+            (click)="setFilter(t)"
+            [class.active]="isActive(t)"
+            [attr.aria-checked]="isActive(t)"
+          >
+            {{ t }}
+          </button>
+        }
+      </div>
+    </aside>
+
+    <!-- Main content -->
+    <div class="content">
+      <div class="blocks">
+        @for (p of filteredProjects(); track p.title ?? $index) {
+          <article class="card">
+            <h3>{{ p.title }}</h3>
+
+            <div class="project">
+              @if (p.img) {
+                <img [src]="p.img" [attr.alt]="p.title" style="width:100%; height:auto; border-radius:8px;">
+              }
+
+              <div class="project-info">
+                <p>{{ p.description }}</p>
+
+                @if (p.link) {
+                  <p><a [href]="p.link" target="_blank" rel="noopener">View project →</a></p>
+                }
+
+                @if (p.year) {
+                  <p class="help">Year: {{ p.year }}</p>
+                }
+
+                <p class="muted">Tags and technologies:</p>
+                <p class="tags-line">
+                  @if (p.tech?.length) {
+                    @for (t of p.tech; let last = $last; track t) {
+                      <span class="badge">{{ t }}</span>
+                      @if (!last) { <span class="sep">|</span> }
+                    }
+                  } @else {
+                    <span class="help">—</span>
+                  }
+                </p>
+              </div>
+            </div>
+          </article>
+        } @empty {
+          <p class="help">No projects match this filter.</p>
+        }
+      </div>
+    </div>
   </div>
 </section>
