feat/fix: contact form (non-linked), fixed filters

--- a/src/pages/projects/projects.html
+++ b/src/pages/projects/projects.html
@@ -46,7 +46,7 @@
 
                 <p class="muted">Tags and technologies:</p>
                 <p class="tags-line">
-                  @if (p.tech?.length) {
+                  @if (p.tech.length) {
                     @for (t of p.tech; let last = $last; track t) {
                       <span class="badge">{{ t }}</span>
                       @if (!last) { <span class="sep">|</span> }
