feat: adding functionality to contacts page!

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,10 +1,7 @@
 <div class="container">
   <h2>Reach out!</h2>
 
-  <form [formGroup]="contactForm"
-        (ngSubmit)="onSubmit()"
-        class="contact-form"
-        novalidate>
+  <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" novalidate>
     <div class="two-col">
       <!-- name -->
       <div class="field">
