fix: changing landing page

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,4 +1,11 @@
 <div class="container">
+  <!-- This page is a work in progress -->
+  <p class="info" role="alert" aria-live="polite">
+    | This contact form is currently a work in progress. Please reach out via
+    a(href="https://www.linkedin.com/in/momo-lim/" target="_blank" rel="noopener") LinkedIn
+    |  or
+    a(href="mailto:monsimb23@gmail.com") email.
+  </p>
   <h2>Reach out!</h2>
 
   <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" novalidate>
