--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -5,6 +5,7 @@
       a(href="https://www.linkedin.com/in/momo-lim/" target="_blank" rel="noopener") LinkedIn
       |  or
       a(href="mailto:monsimb23@gmail.com") email.}</alert>
+  </div>
 
   <h2>Reach out!</h2>
 
