fix: contact page, pardon our dust banner

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,10 +1,9 @@
 <div class="container">
   <!-- This page is a work in progress -->
-  <div>
-    <alert>{This contact form is currently a work in progress. Please reach out via
-      a(href="https://www.linkedin.com/in/momo-lim/" target="_blank" rel="noopener") LinkedIn
-      |  or
-      a(href="mailto:monsimb23@gmail.com") email.}</alert>
+  <div class="alert info" role="alert" aria-live="polite" style="margin-bottom: 1.5rem; padding: 1rem; border-left: 4px solid #2196F3; background-color: #e7f3fe; color: #31708f;">
+  <p>This contact form is currently a work in progress. Please reach out via
+    <a href="https://www.linkedin.com/in/momo-lim/" target="_blank" rel="noopener"> LinkedIn</a> or <a href="mailto:monsimb23@gmail.com">email</a>.
+  </p>
   </div>
 
   <h2>Reach out!</h2>
